Fixed extra space at bottom for Chrome browsers.

--- a/visualize-result/styles.css
+++ b/visualize-result/styles.css
@@ -20,7 +20,7 @@
 
 /* Masonry Layout */
 .masonry.grid {
-	display: block;
+	display: block !important;
 }
 
 @media only screen and (min-width: 768px) {
